--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,5 @@ spring.couchbase.bucket.name=coe-dashboard
 spring.couchbase.bucket.user=admin
 spring.couchbase.bootstrap-hosts=couchbases://cb.l5qhjoisoadkul.cloud.couchbase.com
 spring.couchbase.bucket.password=Admin@123
+spring.security.user.enabled=false
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.security.servlet.SecurityAutoConfiguration
