--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,12 @@
 			<artifactId>reactor-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+        <dependency>
+            <groupId>com.auth0</groupId>
+            <artifactId>java-jwt</artifactId>
+            <version>3.11.0</version>
+        </dependency>
+    </dependencies>
 
 	<build>
 		<plugins>
