--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,14 @@ spring.couchbase.bucket.name=coe-dashboard
 spring.couchbase.bucket.user=admin
 spring.couchbase.bootstrap-hosts=couchbases://cb.l5qhjoisoadkul.cloud.couchbase.com
 spring.couchbase.bucket.password=Admin@123
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=server.email949@gmail.com
+spring.mail.password=tojl jbxw mssk hthx
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.connectiontimeout=5000
+#spring.mail.properties.mail.smtp.timeout=5000
+#spring.mail.properties.mail.smtp.writetimeout=5000
